--- a/index.html
+++ b/index.html
@@ -74,3 +74,72 @@
                 </div>
             </div>
         </nav>
+    <!----carosul slide-->
+    <div class="carousel w-full">
+        <div id="slide1" class="carousel-item relative w-full">
+        <img src="Images/1.png" class="w-full" />
+        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+            <a href="#slide4" class="btn btn-circle">❮</a>
+            <a href="#slide2" class="btn btn-circle">❯</a>
+        </div>
+        </div>
+        <div id="slide2" class="carousel-item relative w-full">
+        <img src="Images/1.png" class="w-full" />
+        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+            <a href="#slide1" class="btn btn-circle">❮</a>
+            <a href="#slide3" class="btn btn-circle">❯</a>
+        </div>
+        </div>
+        <div id="slide3" class="carousel-item relative w-full">
+        <img src="Images/1.png" class="w-full" />
+        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+            <a href="#slide2" class="btn btn-circle">❮</a>
+            <a href="#slide4" class="btn btn-circle">❯</a>
+        </div>
+        </div>
+        <div id="slide4" class="carousel-item relative w-full">
+        <img src="Images/1.png" class="w-full" />
+        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+            <a href="#slide3" class="btn btn-circle">❮</a>
+            <a href="#slide1" class="btn btn-circle">❯</a>
+        </div>
+        </div>
+    </div>
+    <!---feature section-->
+    <section class="text-center">
+        <h2 class="text-4xl font-extrabold text-[#131318] mb-5">Professional Hockeys Club</h2>
+        <p class="lg:max-w-3xl mx-auto mb-10">Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+            turpis placerat dolor. Purus urna in sit nullam proin. </p>
+        <div class="grid gap-5 grid-cols-1 md:grid-cols-2
+        lg:grid-cols-4">
+    <!--11111-->
+    <div class="card bg-base-100 shadow-xl">
+        <figure><div class="radial-progress  text-error" style="--value:87;" role="progressbar">87%</div></figure>
+        <div class="card-body justify-center">
+        <h2 class="text-2xl font-bold">Prayer Facility</h2>
+        <p>If a dog chews shoes whose shoes does he choose?</p>
+        </div>
+    </div>
+    <div class="card bg-base-100 shadow-xl">
+        <figure><div class="radial-progress text-success" style="--value:95;" role="progressbar">95%</div></figure>
+        <div class="card-body justify-center">
+        <h2 class="text-2xl font-bold">Experienced Coach</h2>
+        <p>If a dog chews shoes whose shoes does he choose?</p>
+        </div>
+    </div>
+    <div class="card bg-base-100 shadow-xl">
+        <figure><div class="radial-progress text-warning" style="--value:90;" role="progressbar">90%</div></figure>
+        <div class="card-body justify-center">
+        <h2 class="text-2xl font-bold">Senior Player</h2>
+        <p>If a dog chews shoes whose shoes does he choose?</p>
+        </div>
+    </div>
+    <div class="card bg-base-100 shadow-xl">
+        <figure><div class="radial-progress text-info" style="--value:80;" role="progressbar">80%</div></figure>
+        <div class="card-body justify-center">
+        <h2 class="text-2xl font-bold">Training Ground!</h2>
+        <p>If a dog chews shoes whose shoes does he choose?</p>
+        </div>
+    </div>
+    </div>
+    </section>
