--- a/index.html
+++ b/index.html
@@ -143,3 +143,183 @@
     </div>
     </div>
     </section>
+    <!--program section-->
+    <section class="text-center my-24">
+        <h2 class="text-4xl font-extrabold text-[#131318] mb-5">Program Sections</h2>
+    <p class="lg:max-3xl max-auto mb-8">
+        A client onboarding questionnaire is a survey sent to new customers to get more information 
+        about their needs and goals.  </p>
+        <div class=" grid grid-cols-1 gap-4 md:grid-cols-1
+        lg:grid-cols-2">
+            <div class=" hero min-h-screen" style="background-image: url(Images/2.png);">
+                <div class="hero-overlay bg-opacity-60"></div>
+                <div class="hero-content text-left ml-2 text-neutral-content">
+                <div class="max-w-md box-content ">
+                    <h1 class="mb-5 text-5xl font-bold ">Junior Program</h1>
+                    <p class="mb-5">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+                    <button class="btn btn btn-error text-white">Register Now!</button>
+                </div>
+                </div>
+            </div>
+            <div class="hero min-h-screen" style="background-image: url(Images/3.png);">
+                <div class="hero-overlay bg-opacity-60"></div>
+                <div class="hero-content text-left ml-2 text-neutral-content">
+                <div class="max-w-md box-content">
+                    <h1 class="mb-5 text-5xl font-bold">Teenager Program</h1>
+                    <p class="mb-5">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+                    <button class="btn btn btn-error text-white">Register Now!</button>
+                </div>
+                </div>
+            </div>
+            <div class="hero min-h-screen bg-cover bg-center rounded" style="background-image: url(Images/2.png);">
+                <div class="hero-overlay bg-opacity-60"></div>
+                <div class="hero-content text-left ml-2 text-neutral-content">
+                <div class="max-w-md box-content">
+                    <h1 class="mb-5 text-5xl font-bold">Professional Program</h1>
+                    <p class="mb-5">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+                    <button class="btn btn btn-error text-white">Register Now!</button>
+                </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!---products section-->
+        <section class="text-center my-24">
+            <h2 class="text-4xl font-extrabold text-[#131318] mb-5">Our New Products</h2>
+            <p class="lg:max-3xl max-auto mb-8">
+                a new product release is just that, a way to publicly announce a new product or improved product. It creates a lot of buzz and excitement for your product and (hopefully) 
+                prompts people to buy it. Developing a new product launch strategy is no easy feat.  </p>
+        </section>
+        <!----Clients section-->
+        <section class="text-center my-2">
+            <h2 class="text-4xl font-extrabold text-[#131318] mb-5">Clients Question</h2>
+            <p class="lg:max-3xl max-auto mb-8">A client onboarding questionnaire is a survey sent to new customers to get more information 
+                about their needs and goals. Businesses use this form to ask about specific details and ensure their team is achieving exactly what the client wants. </p>
+                <div class="hero min-h-screen bg-[#FFF]">
+                    <div class="hero-content flex-col lg:flex-row">
+                    <img src="Images/11.png" class="max-w-sm rounded-lg shadow-2xl" />
+                    <div>
+                        <div class="collapse collapse-plus bg-[#FFF]">
+                            <input type="radio" name="my-accordion-3" checked="checked" />
+                            <div class="collapse-title text-xl font-bold">
+                                Our Equipment
+                            </div>
+                            <div class="collapse-content">
+                            <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. 
+                                Elit elit enim sagittis turpis in magna.</p>
+                            </div>
+                        </div>
+                        <div class="collapse collapse-plus bg-[#FFF]">
+                            <input type="radio" name="my-accordion-3" />
+                            <div class="collapse-title text-xl font-bold">
+                                Hockey Training
+                            </div>
+                            <div class="collapse-content">
+                            <p>hello</p>
+                            </div>
+                        </div>
+                        <div class="collapse collapse-plus bg-[#FFF]">
+                            <input type="radio" name="my-accordion-3" />
+                            <div class="collapse-title text-xl font-bold">
+                                Private Lessons
+                            </div>
+                            <div class="collapse-content">
+                            <p>hello</p>
+                            </div>
+                        </div>
+                        <div class="collapse collapse-plus bg-[#FFF]">
+                            <input type="radio" name="my-accordion-3" />
+                            <div class="collapse-title text-xl font-bold">
+                                Ski Touring
+                            </div>
+                            <div class="collapse-content">
+                            <p>hello</p>
+                            </div>
+                        </div>
+                        <div class="collapse collapse-plus bg-[#FFF]">
+                            <input type="radio" name="my-accordion-3" />
+                            <div class="collapse-title text-xl font-bold">
+                                Booking
+                            </div>
+                            <div class="collapse-content">
+                            <p>hello</p>
+                            </div>
+                        </div>
+                        <div class="collapse collapse-plus bg-[#FFF] border-color-red">
+                            <input type="radio" name="my-accordion-3" />
+                            <div class="collapse-title text-xl font-bold">
+                                Pricings
+                            </div>
+                            <div class="collapse-content">
+                            <p>hello</p>
+                            </div>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+            </section>
+</main>
+<!----example-->
+<section class="text-center my-2">
+    <h2 class="text-4xl font-extrabold text-[#131318] mb-5">Get In Touch</h2>
+    <p class="lg:max-3xl max-auto mb-8">Dit amet consectetur. Condimentum dignissim adipiscing 
+        aliquam turpis placerat dolor. Purus urna in sit nullam proin.  </p>
+        <div class="hero min-h-screen bg-base-200">
+            <div class="hero-content flex-col lg:flex-row">
+                <div class="card card-compact w-96  bg-[rgba(188, 237, 109, 0.10);] shadow-xl">
+                    <figure><img src="Images/Group 1171275317.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                    <h2 class="card-title">Phone Number :</h2>
+                    <p>(+62) 123-321-543</p>
+                    </div>
+                </div>
+        <div class="hero min-h-screen bg-base-200">
+            <div class="hero-content flex-row lg:row">
+                <div class="card card-compact w-96 bg-[rgba(253, 221, 95, 0.10);] shadow-xl">
+                    <figure><img src="Images/Group 1171275318.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                    <h2 class="card-title">Email :</h2>
+                    <p> hockeys@support.com</p>
+                    </div>
+                </div>
+        <div class="hero min-h-screen bg-base-200">
+            <div class="hero-content flex-col lg:flex-row">
+                <div class="card card-compact w-96 bg-[rgba(188, 237, 109, 0.10);]                ] shadow-xl">
+                    <figure><img src="Images/Group 1171275321.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                    <h2 class="card-title">Location : </h2>
+                    <p>152/1 Mohakhali Wireless Gate</p>
+                    </div>
+                </div>
+            <div class="card shrink-0 w-full max-w-sm shadow-2xl bg-base-100">
+                <form class="card-body">
+                <div class="form-control">
+                    <label class="label">
+                    <span class="label-text">Your Email</span>
+                    </label>
+                    <input type="email" placeholder="email" class="input input-bordered" required />
+                </div>
+                <div class="form-control">
+                    <label class="label">
+                    <span class="label-text">Your Password</span>
+                    </label>
+                    <input type="password" placeholder="password" class="input input-bordered" required />
+                    <label class="label">
+                    <a href="#" class="label-text-alt link link-hover">Forgot password?</a>
+                    </label>
+                </div>
+                <label class="form-control">
+                    <div class="label">
+                    <span class="label-text">Your message</span>
+                    </div>
+                    <textarea class="textarea textarea-bordered h-24" placeholder="Message"></textarea>
+                    <div class="label">
+                    </div>
+                </label>
+                
+                </form>
+            </div>
+            </div>
+            </div>
+        </div>
+</section>
